# RADRunner

./: .gitignore  CMakeLists.txt  CODEOWNERS  ClientCommands.cpp  ClientCommands.h  Commands.h  DirWrapper.cpp  DirWrapper.h  Execute.cpp  Handler.cpp  LICENSE  RADRunner.cpp  RADRunner.sln  RADRunner.vcxproj  README.md  ReleaseNotes.txt  ServerCommands.cpp  ServerCommands.h  StdSocket.cpp  StdSocket.h  makefile
.github/workflows/: amiga_os3.yml  amiga_os4.yml  linux.yml  macos.yaml  windows.yml
Examples/: BuildAndGet.rad  SendAndExecute.rad  c_cpp_properties.json  make  settings.json
